Fixing contributor wrapping issue.

--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -141,7 +141,7 @@ header#hero {
 		}
 
 		ul {
-			margin: 1.715em 0 -0.75em 0;
+			margin: 1.715em -1em -0.75em 0;
 
 			li {
 				display: block;
@@ -288,12 +288,6 @@ header#hero {
 	header#hero {
 		#hero-text {
 			.column(16);
-		}
-	}
-}
-@media screen and (max-width: 24em) {
-	header#hero {
-		#hero-text {
 			margin-bottom: 2em;
 
 			h1#title {
@@ -588,7 +582,7 @@ article#contributors {
 			}
 		}
 		p {
-			min-height: 4.62em;
+			height: 4.62em;
 			margin-bottom: 1em;
 			font-size: 0.928em;
 			line-height: 1.23em;
